add some entity