@@ -1,10 +1,4 @@
-FROM gradle:7.4.1 AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build
-
-FROM openjdk:8-jre-slim
+FROM openjdk:17
 EXPOSE 8080
-COPY --from=build /home/gradle/src/build/libs/spring-petclinic-kotlin-2.6.2.jar /app/
-RUN bash -c 'touch /app/spring-petclinic-kotlin-2.6.2.jar'
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-petclinic-kotlin-2.6.2.jar"]
+ADD /build/libs/linda-0.0.1-SNAPSHOT.jar backend.jar
+ENTRYPOINT ["java", "-jar", "backend.jar"]
